--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,18 @@ server.port = 8282
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=SCOTT
-spring.datasource.password=TIGER
+spring.datasource.username=scott
+spring.datasource.password=tiger
 
 spring.devtools.livereload.enabled=true
 
+#MyBatis
 #xml location
+#src/main/resources/mappers
 mybatis.mapper-locations=classpath:mappers/**/*.xml
 mybatis.type-aliases-package=edu.global.ex
 
-#### jsp 
+#jsp
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
